@@ -14,15 +14,16 @@ use DBIx::Custom::Result;
 use DBIx::Custom::Query;
 use DBIx::Custom::QueryBuilder;
 use DBIx::Custom::Where;
+use DBIx::Custom::Table;
 use Encode qw/encode_utf8 decode_utf8/;
 
 __PACKAGE__->attr(
     [qw/data_source dbh password user/],
     cache => 1,
-    dbi_option => sub { {} },
+    dbi_option    => sub { {} },
     query_builder => sub { DBIx::Custom::QueryBuilder->new },
     result_class  => 'DBIx::Custom::Result',
-    table_class   => 'DBIx::Custom::Table'
+    base_table    => sub { DBIx::Custom::Table->new(dbi => shift) }
 );
 
 __PACKAGE__->attr(
@@ -569,19 +570,30 @@ sub table {
     my $self = shift;
     my $name = shift;
     
-    # Table class
-    my $table_class = $self->table_class;
-    croak qq{Invalid table class name "$table_class"}
-      unless $table_class =~ /^[\w:]+$/;
-    unless ($table_class->can('isa')) {
-        eval "require $table_class";
-        croak $@ if $@;
-    }
     # Create table
     $self->{_tables} ||= {};
-    $self->{_tables}->{$name}
-        = $table_class->new(name => $name, dbi => $self)
-      unless defined $self->{_tables}->{$name};
+    unless (defined $self->{_tables}->{$name}) {
+        # Base table
+        my $base_table = $self->base_table;
+        
+        # Base methods
+        my $bmethods = ref $base_table->{_methods} eq 'HASH'
+                     ? $base_table->{_methods}
+                     : {};
+        
+        # Copy Methods
+        my $methods = {};
+        $methods->{$_} = $bmethods->{$_} for keys %$bmethods;
+        
+        # Create table
+        my $table = $base_table->new(
+            dbi      => $self,
+            name     => $name,
+            base     => $base_table,
+            _methods => $methods
+        );
+        $self->{_tables}->{$name} = $table;
+    }
     
     return $self->{_tables}{$name};
 }
